4. Найти утечку памяти. [#504882]

--- a/log.txt.2
+++ b/log.txt.2
@@ -1,13 +1,31 @@
-[0.024s][info][gc] Using G1
-[17.420s][info][gc] GC(0) Pause Young (Normal) (G1 Evacuation Pause) 10M->3M(24M) 9.812ms
-[69.454s][info][gc] GC(1) Pause Young (Normal) (G1 Evacuation Pause) 9M->3M(24M) 4.089ms
-[144.512s][info][gc] GC(2) Pause Young (Normal) (G1 Evacuation Pause) 11M->3M(24M) 1.711ms
-[230.568s][info][gc] GC(3) Pause Young (Normal) (G1 Evacuation Pause) 13M->4M(24M) 1.683ms
-[259.774s][info][gc] GC(4) Pause Young (Normal) (G1 Evacuation Pause) 15M->5M(24M) 1.119ms
-[259.796s][info][gc] GC(5) Pause Young (Normal) (G1 Evacuation Pause) 14M->6M(24M) 1.258ms
-[259.810s][info][gc] GC(6) Pause Young (Normal) (G1 Evacuation Pause) 15M->6M(24M) 1.227ms
-[340.634s][info][gc] GC(7) Pause Young (Normal) (G1 Evacuation Pause) 16M->4M(24M) 1.994ms
-[447.687s][info][gc] GC(8) Pause Young (Normal) (G1 Evacuation Pause) 15M->4M(24M) 1.242ms
-[573.756s][info][gc] GC(9) Pause Young (Normal) (G1 Evacuation Pause) 18M->4M(24M) 1.243ms
-[700.827s][info][gc] GC(10) Pause Young (Normal) (G1 Evacuation Pause) 17M->4M(24M) 0.738ms
-[827.886s][info][gc] GC(11) Pause Young (Normal) (G1 Evacuation Pause) 18M->4M(24M) 1.274ms
+[0.019s][info][gc] Using Serial
+[5.618s][info][gc] GC(0) Pause Young (Allocation Failure) 4M->2M(15M) 4.449ms
+[5.849s][info][gc] GC(1) Pause Young (Allocation Failure) 6M->3M(15M) 5.853ms
+[35.908s][info][gc] GC(2) Pause Young (Allocation Failure) 7M->3M(15M) 4.949ms
+[75.875s][info][gc] GC(3) Pause Young (Allocation Failure) 7M->3M(15M) 0.889ms
+[86.740s][info][gc] GC(4) Pause Young (Allocation Failure) 7M->4M(15M) 3.288ms
+[86.810s][info][gc] GC(5) Pause Young (Allocation Failure) 8M->6M(15M) 4.868ms
+[86.879s][info][gc] GC(6) Pause Young (Allocation Failure) 10M->7M(15M) 3.882ms
+[86.919s][info][gc] GC(7) Pause Young (Allocation Failure) 12M->9M(15M) 4.147ms
+[86.940s][info][gc] GC(8) Pause Young (Allocation Failure) 13M->13M(15M) 0.043ms
+[86.963s][info][gc] GC(9) Pause Full (Allocation Failure) 13M->7M(15M) 22.696ms
+[87.000s][info][gc] GC(10) Pause Young (Allocation Failure) 11M->9M(15M) 5.107ms
+[87.016s][info][gc] GC(11) Pause Young (Allocation Failure) 13M->13M(15M) 0.044ms
+[87.035s][info][gc] GC(12) Pause Full (Allocation Failure) 13M->5M(15M) 18.827ms
+[87.949s][info][gc] GC(13) Pause Young (Allocation Failure) 10M->7M(15M) 4.298ms
+[126.968s][info][gc] GC(14) Pause Young (Allocation Failure) 12M->7M(15M) 1.255ms
+[166.983s][info][gc] GC(15) Pause Young (Allocation Failure) 11M->7M(15M) 0.739ms
+[181.864s][info][gc] GC(16) Pause Young (Allocation Failure) 11M->9M(15M) 2.317ms
+[181.880s][info][gc] GC(17) Pause Young (Allocation Failure) 13M->10M(15M) 3.807ms
+[181.892s][info][gc] GC(18) Pause Young (Allocation Failure) 15M->15M(15M) 0.046ms
+[181.912s][info][gc] GC(19) Pause Full (Allocation Failure) 15M->6M(15M) 20.623ms
+[181.935s][info][gc] GC(20) Pause Young (Allocation Failure) 11M->8M(15M) 4.862ms
+[181.955s][info][gc] GC(21) Pause Young (Allocation Failure) 13M->13M(15M) 0.050ms
+[181.974s][info][gc] GC(22) Pause Full (Allocation Failure) 13M->5M(15M) 19.344ms
+[182.007s][info][gc] GC(23) Pause Young (Allocation Failure) 10M->7M(15M) 4.434ms
+[182.026s][info][gc] GC(24) Pause Young (Allocation Failure) 12M->9M(15M) 3.522ms
+[182.039s][info][gc] GC(25) Pause Young (Allocation Failure) 13M->13M(15M) 0.047ms
+[182.059s][info][gc] GC(26) Pause Full (Allocation Failure) 13M->6M(15M) 19.411ms
+[218.028s][info][gc] GC(27) Pause Young (Allocation Failure) 11M->6M(15M) 4.410ms
+[259.048s][info][gc] GC(28) Pause Young (Allocation Failure) 11M->6M(15M) 0.909ms
+[301.073s][info][gc] GC(29) Pause Young (Allocation Failure) 11M->6M(15M) 0.982ms
