--- a/log.txt.3
+++ b/log.txt.3
@@ -1,45 +1,16 @@
-[0.069s][info][gc] Using The Z Garbage Collector
-[0.807s][info][gc] GC(0) Garbage Collection (Warmup) 4M(17%)->4M(17%)
-[0.889s][info][gc] GC(1) Garbage Collection (Allocation Rate) 4M(17%)->4M(17%)
-[0.969s][info][gc] GC(2) Garbage Collection (Allocation Rate) 4M(17%)->4M(17%)
-[1.070s][info][gc] GC(3) Garbage Collection (Allocation Rate) 4M(17%)->4M(17%)
-[1.178s][info][gc] GC(4) Garbage Collection (Allocation Rate) 4M(17%)->4M(17%)
-[1.271s][info][gc] GC(5) Garbage Collection (Allocation Rate) 4M(17%)->4M(17%)
-[1.365s][info][gc] GC(6) Garbage Collection (Allocation Rate) 4M(17%)->4M(17%)
-[1.474s][info][gc] GC(7) Garbage Collection (Allocation Rate) 4M(17%)->4M(17%)
-[1.569s][info][gc] GC(8) Garbage Collection (Allocation Rate) 4M(17%)->4M(17%)
-[10.465s][info][gc] GC(9) Garbage Collection (Warmup) 6M(25%)->4M(17%)
-[10.882s][info][gc] GC(10) Garbage Collection (Warmup) 8M(33%)->6M(25%)
-[12.086s][info][gc] GC(11) Garbage Collection (Proactive) 10M(42%)->6M(25%)
-[15.274s][info][gc] GC(12) Garbage Collection (Proactive) 10M(42%)->6M(25%)
-[26.394s][info][gc] GC(13) Garbage Collection (Proactive) 10M(42%)->6M(25%)
-[38.393s][info][gc] GC(14) Garbage Collection (Proactive) 10M(42%)->6M(25%)
-[50.281s][info][gc] GC(15) Garbage Collection (Proactive) 10M(42%)->8M(33%)
-[76.373s][info][gc] GC(16) Garbage Collection (Proactive) 12M(50%)->6M(25%)
-[88.374s][info][gc] GC(17) Garbage Collection (Proactive) 10M(42%)->6M(25%)
-[98.383s][info][gc] GC(18) Garbage Collection (Proactive) 10M(42%)->6M(25%)
-[102.177s][info][gc] GC(19) Garbage Collection (Proactive) 10M(42%)->8M(33%)
-[114.395s][info][gc] GC(20) Garbage Collection (Proactive) 12M(50%)->8M(33%)
-[129.381s][info][gc] GC(21) Garbage Collection (Proactive) 12M(50%)->8M(33%)
-[144.387s][info][gc] GC(22) Garbage Collection (Proactive) 12M(50%)->8M(33%)
-[159.494s][info][gc] GC(23) Garbage Collection (Proactive) 12M(50%)->8M(33%)
-[174.492s][info][gc] GC(24) Garbage Collection (Proactive) 12M(50%)->8M(33%)
-[186.165s][info][gc] Allocation Stall (main) 15.232ms
-[186.167s][info][gc] GC(25) Garbage Collection (Allocation Stall) 24M(100%)->12M(50%)
-[186.203s][info][gc] Allocation Stall (main) 13.590ms
-[186.205s][info][gc] GC(26) Garbage Collection (Allocation Stall) 24M(100%)->14M(58%)
-[186.280s][info][gc] GC(27) Garbage Collection (Allocation Rate) 18M(75%)->8M(33%)
-[186.488s][info][gc] GC(28) Garbage Collection (Allocation Rate) 10M(42%)->8M(33%)
-[186.572s][info][gc] GC(29) Garbage Collection (Allocation Rate) 8M(33%)->8M(33%)
-[186.688s][info][gc] GC(30) Garbage Collection (Allocation Rate) 8M(33%)->8M(33%)
-[186.783s][info][gc] GC(31) Garbage Collection (Allocation Rate) 8M(33%)->8M(33%)
-[186.878s][info][gc] GC(32) Garbage Collection (Allocation Rate) 8M(33%)->8M(33%)
-[201.488s][info][gc] GC(33) Garbage Collection (Proactive) 12M(50%)->8M(33%)
-[214.484s][info][gc] GC(34) Garbage Collection (Proactive) 12M(50%)->8M(33%)
-[229.485s][info][gc] GC(35) Garbage Collection (Proactive) 12M(50%)->8M(33%)
-[243.487s][info][gc] GC(36) Garbage Collection (Proactive) 12M(50%)->8M(33%)
-[258.490s][info][gc] GC(37) Garbage Collection (Proactive) 12M(50%)->8M(33%)
-[271.487s][info][gc] GC(38) Garbage Collection (Proactive) 12M(50%)->8M(33%)
-[286.489s][info][gc] GC(39) Garbage Collection (Proactive) 12M(50%)->10M(42%)
-[314.585s][info][gc] GC(40) Garbage Collection (Proactive) 14M(58%)->8M(33%)
-[329.585s][info][gc] GC(41) Garbage Collection (Proactive) 12M(50%)->8M(33%)
+[0.047s][info][gc] Using Serial
+[6.112s][info][gc] GC(0) Pause Young (Allocation Failure) 4M->2M(15M) 5.013ms
+[6.476s][info][gc] GC(1) Pause Young (Allocation Failure) 6M->3M(15M) 6.198ms
+[35.558s][info][gc] GC(2) Pause Young (Allocation Failure) 7M->3M(15M) 3.187ms
+[42.176s][info][gc] GC(3) Pause Young (Allocation Failure) 7M->4M(15M) 3.631ms
+[42.249s][info][gc] GC(4) Pause Young (Allocation Failure) 9M->6M(15M) 4.989ms
+[42.328s][info][gc] GC(5) Pause Young (Allocation Failure) 10M->8M(15M) 3.698ms
+[42.377s][info][gc] GC(6) Pause Young (Allocation Failure) 12M->9M(15M) 3.838ms
+[42.405s][info][gc] GC(7) Pause Young (Allocation Failure) 14M->14M(15M) 0.046ms
+[42.427s][info][gc] GC(8) Pause Full (Allocation Failure) 14M->7M(15M) 22.124ms
+[42.456s][info][gc] GC(9) Pause Young (Allocation Failure) 11M->9M(15M) 5.188ms
+[42.471s][info][gc] GC(10) Pause Young (Allocation Failure) 13M->13M(15M) 0.044ms
+[42.488s][info][gc] GC(11) Pause Full (Allocation Failure) 13M->6M(15M) 17.180ms
+[47.527s][info][gc] GC(12) Pause Young (Allocation Failure) 10M->7M(15M) 7.862ms
+[85.596s][info][gc] GC(13) Pause Young (Allocation Failure) 12M->7M(15M) 0.652ms
+[126.628s][info][gc] GC(14) Pause Young (Allocation Failure) 11M->7M(15M) 0.924ms
