--- a/log.txt.1
+++ b/log.txt.1
@@ -1,30 +1,26 @@
-[0.015s][info][gc] Using Parallel
-[9.956s][info][gc] GC(0) Pause Young (Allocation Failure) 6M->2M(23M) 3.962ms
-[33.322s][info][gc] GC(1) Pause Young (Allocation Failure) 8M->3M(23M) 3.386ms
-[87.363s][info][gc] GC(2) Pause Young (Allocation Failure) 9M->3M(23M) 3.261ms
-[135.282s][info][gc] GC(3) Pause Young (Allocation Failure) 9M->4M(23M) 3.573ms
-[193.287s][info][gc] GC(4) Pause Young (Allocation Failure) 10M->4M(23M) 3.186ms
-[199.804s][info][gc] GC(5) Pause Young (Allocation Failure) 10M->5M(20M) 2.336ms
-[199.812s][info][gc] GC(6) Pause Young (Allocation Failure) 8M->5M(21M) 1.964ms
-[199.818s][info][gc] GC(7) Pause Young (Allocation Failure) 8M->5M(21M) 0.533ms
-[199.825s][info][gc] GC(8) Pause Young (Allocation Failure) 8M->5M(21M) 0.494ms
-[199.831s][info][gc] GC(9) Pause Young (Allocation Failure) 8M->6M(21M) 0.345ms
-[199.837s][info][gc] GC(10) Pause Young (Allocation Failure) 9M->6M(21M) 0.515ms
-[199.844s][info][gc] GC(11) Pause Young (Allocation Failure) 9M->6M(21M) 0.276ms
-[199.853s][info][gc] GC(12) Pause Young (Allocation Failure) 9M->6M(21M) 0.379ms
-[204.447s][info][gc] GC(13) Pause Young (Allocation Failure) 9M->6M(21M) 0.494ms
-[232.473s][info][gc] GC(14) Pause Young (Allocation Failure) 9M->6M(21M) 0.511ms
-[261.493s][info][gc] GC(15) Pause Young (Allocation Failure) 9M->6M(21M) 0.669ms
-[280.506s][info][gc] GC(16) Pause Young (Allocation Failure) 9M->6M(21M) 0.535ms
-[309.517s][info][gc] GC(17) Pause Young (Allocation Failure) 9M->6M(21M) 0.544ms
-[338.528s][info][gc] GC(18) Pause Young (Allocation Failure) 9M->6M(21M) 0.568ms
-[358.315s][info][gc] GC(19) Pause Young (Allocation Failure) 9M->7M(21M) 0.383ms
-[387.331s][info][gc] GC(20) Pause Young (Allocation Failure) 10M->7M(21M) 0.680ms
-[416.345s][info][gc] GC(21) Pause Young (Allocation Failure) 10M->7M(21M) 0.338ms
-[445.580s][info][gc] GC(22) Pause Young (Allocation Failure) 10M->7M(21M) 0.338ms
-[474.591s][info][gc] GC(23) Pause Young (Allocation Failure) 10M->7M(22M) 0.528ms
-[508.603s][info][gc] GC(24) Pause Young (Allocation Failure) 10M->7M(21M) 0.613ms
-[542.618s][info][gc] GC(25) Pause Young (Allocation Failure) 10M->7M(21M) 0.590ms
-[576.630s][info][gc] GC(26) Pause Young (Allocation Failure) 10M->7M(21M) 0.586ms
-[610.643s][info][gc] GC(27) Pause Young (Allocation Failure) 10M->7M(21M) 0.359ms
-[644.662s][info][gc] GC(28) Pause Young (Allocation Failure) 10M->7M(21M) 0.581ms
+[0.038s][info][gc] Using Serial
+[3.717s][info][gc] GC(0) Pause Young (Allocation Failure) 4M->2M(15M) 4.791ms
+[4.073s][info][gc] GC(1) Pause Young (Allocation Failure) 6M->3M(15M) 5.972ms
+[34.127s][info][gc] GC(2) Pause Young (Allocation Failure) 7M->3M(15M) 4.867ms
+[47.053s][info][gc] GC(3) Pause Young (Allocation Failure) 7M->4M(15M) 2.839ms
+[47.126s][info][gc] GC(4) Pause Young (Allocation Failure) 8M->6M(15M) 5.174ms
+[47.223s][info][gc] GC(5) Pause Young (Allocation Failure) 10M->7M(15M) 4.145ms
+[47.298s][info][gc] GC(6) Pause Young (Allocation Failure) 12M->9M(15M) 3.816ms
+[47.335s][info][gc] GC(7) Pause Young (Allocation Failure) 13M->13M(15M) 0.049ms
+[47.356s][info][gc] GC(8) Pause Full (Allocation Failure) 13M->6M(15M) 20.498ms
+[47.382s][info][gc] GC(9) Pause Young (Allocation Failure) 10M->8M(15M) 5.040ms
+[47.402s][info][gc] GC(10) Pause Young (Allocation Failure) 12M->10M(15M) 3.836ms
+[47.417s][info][gc] GC(11) Pause Young (Allocation Failure) 14M->14M(15M) 0.044ms
+[47.437s][info][gc] GC(12) Pause Full (Allocation Failure) 14M->6M(15M) 19.990ms
+[85.139s][info][gc] GC(13) Pause Young (Allocation Failure) 10M->6M(15M) 3.923ms
+[125.240s][info][gc] GC(14) Pause Young (Allocation Failure) 10M->6M(15M) 0.851ms
+[134.089s][info][gc] GC(15) Pause Young (Allocation Failure) 10M->8M(15M) 2.807ms
+[134.105s][info][gc] GC(16) Pause Young (Allocation Failure) 12M->9M(15M) 3.501ms
+[134.116s][info][gc] GC(17) Pause Young (Allocation Failure) 14M->14M(15M) 0.045ms
+[134.133s][info][gc] GC(18) Pause Full (Allocation Failure) 14M->6M(15M) 17.087ms
+[134.150s][info][gc] GC(19) Pause Young (Allocation Failure) 10M->8M(15M) 4.431ms
+[134.165s][info][gc] GC(20) Pause Young (Allocation Failure) 12M->10M(15M) 3.302ms
+[134.177s][info][gc] GC(21) Pause Young (Allocation Failure) 14M->14M(15M) 0.046ms
+[134.197s][info][gc] GC(22) Pause Full (Allocation Failure) 14M->6M(15M) 19.727ms
+[134.216s][info][gc] GC(23) Pause Young (Allocation Failure) 10M->8M(15M) 4.468ms
+[140.260s][info][gc] GC(24) Pause Young (Allocation Failure) 12M->9M(15M) 5.740ms
