--- a/log.txt.4
+++ b/log.txt.4
@@ -1,1 +1,27 @@
-[0.036s][info][gc] Using Serial
+[0.022s][info][gc] Using Serial
+[5.028s][info][gc] GC(0) Pause Young (Allocation Failure) 4M->2M(15M) 4.353ms
+[5.252s][info][gc] GC(1) Pause Young (Allocation Failure) 6M->3M(15M) 5.601ms
+[35.284s][info][gc] GC(2) Pause Young (Allocation Failure) 7M->3M(15M) 4.744ms
+[38.696s][info][gc] GC(3) Pause Young (Allocation Failure) 7M->4M(15M) 3.974ms
+[38.766s][info][gc] GC(4) Pause Young (Allocation Failure) 9M->6M(15M) 4.671ms
+[38.838s][info][gc] GC(5) Pause Young (Allocation Failure) 11M->8M(15M) 3.885ms
+[38.873s][info][gc] GC(6) Pause Young (Allocation Failure) 12M->9M(15M) 4.235ms
+[38.897s][info][gc] GC(7) Pause Young (Allocation Failure) 14M->14M(15M) 0.045ms
+[38.919s][info][gc] GC(8) Pause Full (Allocation Failure) 14M->7M(15M) 22.013ms
+[38.949s][info][gc] GC(9) Pause Young (Allocation Failure) 11M->9M(15M) 5.110ms
+[38.964s][info][gc] GC(10) Pause Young (Allocation Failure) 13M->13M(15M) 0.042ms
+[38.980s][info][gc] GC(11) Pause Full (Allocation Failure) 13M->6M(15M) 16.146ms
+[47.327s][info][gc] GC(12) Pause Young (Allocation Failure) 10M->7M(15M) 7.863ms
+[86.342s][info][gc] GC(13) Pause Young (Allocation Failure) 11M->7M(15M) 0.612ms
+[107.337s][info][gc] GC(14) Pause Young (Allocation Failure) 11M->8M(15M) 1.742ms
+[107.351s][info][gc] GC(15) Pause Young (Allocation Failure) 12M->10M(15M) 3.284ms
+[107.361s][info][gc] GC(16) Pause Young (Allocation Failure) 14M->14M(15M) 0.046ms
+[107.381s][info][gc] GC(17) Pause Full (Allocation Failure) 14M->6M(15M) 19.555ms
+[107.401s][info][gc] GC(18) Pause Young (Allocation Failure) 10M->8M(15M) 4.498ms
+[107.417s][info][gc] GC(19) Pause Young (Allocation Failure) 12M->10M(15M) 3.436ms
+[107.429s][info][gc] GC(20) Pause Young (Allocation Failure) 14M->14M(15M) 0.046ms
+[107.449s][info][gc] GC(21) Pause Full (Allocation Failure) 14M->6M(15M) 20.599ms
+[107.468s][info][gc] GC(22) Pause Young (Allocation Failure) 10M->8M(15M) 4.608ms
+[107.485s][info][gc] GC(23) Pause Young (Allocation Failure) 12M->9M(15M) 3.525ms
+[143.375s][info][gc] GC(24) Pause Young (Allocation Failure) 14M->14M(15M) 0.052ms
+[143.392s][info][gc] GC(25) Pause Full (Allocation Failure) 14M->4M(15M) 16.686ms
